<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:background="@color/colorWindowBackground"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/login_img"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <EditText
        android:id="@+id/account_edit"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="@drawable/bg_round_border"
        android:hint="@string/login_fragment_account"
        android:textSize="25sp"
        android:textColorHint="#93948C"
        android:inputType="number"
        android:maxLines="1"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintVertical_bias="0.25"
        app:layout_constraintTop_toBottomOf="@id/login_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <EditText
        android:id="@+id/pwd_edit"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="@drawable/bg_round_border"
        android:hint="@string/login_fragment_password"
        android:textSize="25sp"
        android:textColorHint="#93948C"
        android:singleLine="true"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintTop_toBottomOf="@id/account_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="@drawable/bg_round_corner"
        android:text="@string/login_fragment_login"
        android:textColor="#C9D82A"
        android:textSize="25sp"
        android:textAllCaps="false"
        android:layout_marginTop="30dp"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintTop_toBottomOf="@id/pwd_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>